--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Flutter JWT Authentication</title>
+  <title>RentooPMS</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
